--- a/MonolithicWebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/MonolithicWebApplication/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,28 @@
-﻿<ul class="navbar-nav">
-    <li class="nav-item">
-        <a class="nav-link" href="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/Account/Login">Login</a>
-    </li>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SingInManager
+@inject UserManager<IdentityUser> UserManager
+
+<ul class="navbar-nav">
+    @if (SingInManager.IsSignedIn(User))
+    {
+        <li class="nav-item">
+            <a class="nav-link" href="/Account/Manage/Index" title="Manage">@User.Identity.Name</a>
+        </li>
+        <li class="nav-item">
+            <form class="form-inline" action="Account/Logout" method="post">
+                <button type="submit" class="nav-link btn btn-link">Logout</button>
+            </form>
+        </li>
+    }
+    else
+    {
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/Account/Register">Register</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/Account/Login">Login</a>
+            </li>
+        </ul>
+    }
 </ul>
